finished the future page

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                   <img src="https://i.pinimg.com/736x/07/a4/eb/07a4eb6e6f189b270eabd026998d86ce--card-reader-information-technology.jpg" alt="">
                 </span>
                 <div class="title">
-                  <h2>Masina de tabulare Holerith</h2>
-                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
+                  <h2>Masina de tabulare Hollerith</h2>
+                  <p>Mașina de tabulare Hollerith a fost inventată de Herman Hollerith în 1890 și a fost folosită pentru a procesa datele de recensământ din SUA. Aceasta a fost prima mașină de calcul care a utilizat carduri perforate pentru a stoca și procesa informații.</p>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -76,7 +76,7 @@
                 </span>
                 <div class="title">
                   <h2>Atanasoff-Berry Computer</h2>
-                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
+                  <p>Calculatorul Atanasoff-Berry a fost inventat în 1937 de John Atanasoff și Clifford Berry. Acesta a fost primul calculator electronic digital.</p>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -85,7 +85,7 @@
                 </span>
                 <div class="title">
                   <h2>ENIAC</h2>
-                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
+                  <p>ENIAC a fost primul calculator electronic de dimensiuni mari și a fost construit în 1945. Acesta a fost utilizat pentru a efectua calcule complexe, cum ar fi traiectoriile proiectilelor în timpul celui de-al Doilea Război Mondial.</p>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -94,7 +94,7 @@
                 </span>
                 <div class="title">
                   <h2>UNIVAC I</h2>
-                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
+                  <p>UNIVAC 1 a fost primul calculator comercial de succes și a fost lansat în 1951. Acesta a fost utilizat în special pentru procesarea datelor de afaceri și a marcat începutul erei calculatoarelor pentru uz comercial.</p>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -103,7 +103,7 @@
                 </span>
                 <div class="title">
                   <h2>IBM PC</h2>
-                  <p>Mașina analitică a fost o mașină de calcul proiectată de Charles Babbage în secolul al XIX-lea. Aceasta ar fi putut efectua calcule complexe și ar fi avut o memorie programabilă. Cu toate acestea, mașina nu a fost niciodată finalizată.</p>
+                  <p>IBM PC a fost primul computer personal de mare succes și a fost lansat în 1981. Acesta a fost creat de IBM și a deschis calea pentru o utilizare mai largă a calculatoarelor personale.</p>
                 </div>
               </div>
             </div>
@@ -140,50 +140,52 @@
       <div id="processor" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908535.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1613616631374-121ea711cc3d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=500" alt="">
-        <p>Procesor (CPU - Unitate Centrală de Procesare): este un component esențial al calculatorului, care execută instrucțiunile software-ului și efectuează operații aritmetice și logice.</p>
+        <p><b>Procesorul</b> este componenta calculatorului care execută instrucțiuni și efectuează operații aritmetice și logice.</p>
       </div>
       <div id="motherboard" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908540.png" alt="">
         <img  class="component-cover"src="https://images.pexels.com/photos/3520694/pexels-photo-3520694.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-        <p>Placa de bază (Motherboard): este placa de bază a sistemului, care conectează toate componentele calculatorului și asigură comunicarea dintre ele.</p>
+        <p><b>Placa de bază</b> a sistemului, conectează toate componentele calculatorului și asigură comunicarea dintre ele.</p>
       </div>
       <div id="memory" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908522.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1562976540-1502c2145186?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80" alt="">
-        <p>Memoria (RAM - Memorie de Acces Aleator): este un tip de memorie temporară, care stochează datele și programele utilizate în mod curent.</p>
+        <p><b>Memoria RAM</b> este un tip de memorie temporară, care stochează datele și programele utilizate în mod curent.</p>
       </div>
       <div id="storage" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908521.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1597852074816-d933c7d2b988?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="">
-        <p>Stocarea (hard drive sau solid state drive): este un dispozitiv de stocare a datelor, care salvează programele și fișierele permanent.</p>
+        <p><b>Stocarea</b> salvează programele și fișierele permanent.</p>
       </div>
       <div id="psu" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908526.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1659856577105-c8ec1a364aa0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&h=600&q=80" alt="">
-        <p>Alimentatorul de putere (Power supply): este un component care transformă curentul alternativ în curent continuu și alimentează toate componentele calculatorului.</p>
+        <p><b>Alimentatorul de putere</b> este componenta care transformă curentul alternativ în curent continuu și alimentează toate componentele calculatorului.</p>
       </div>
       <div id="gpu" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/1470/1470162.png" alt="">
-        <img class="component-cover" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcdn.24htech.asia%2Fnews%2Fwp-content%2Fuploads%2F2022%2F05%2F20001009%2Fimage-nvidia-geforce-rtx-4090-ti-rtx-4090-graphics-card-specs-performance-price-availability-everything-we-know-so-far-165295500947685.png&f=1&nofb=1&ipt=e599f946195a0e9dd09d711a4ac71fc946de35549c84237c323588103a9d47a4&ipo=images" alt="">
-        <p>Placa grafică (GPU - Unitate de Procesare a Graficii): este un component care procesează informațiile grafice și afișează imagini pe ecran.</p>
+        <img class="component-cover" src="https://images.pexels.com/photos/8622911/pexels-photo-8622911.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="">
+        <p><b>Placa grafică</b> este componenta care procesează informațiile grafice și afișează imagini pe ecran.</p>
       </div>
       <div id="cooling" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/4617/4617749.png" alt="">
         <img class="component-cover" src="https://images.pexels.com/photos/3520696/pexels-photo-3520696.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-        <p>Sistemul de răcire: este necesar pentru a menține temperatura calculatorului la niveluri normale, evitând supraincalzirea.</p>
+        <p><b>Sistemul de răcire</b> este necesar pentru a menține temperatura calculatorului la niveluri normale, evitând supraincalzirea.</p>
       </div>
       <div id="case" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908593.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1660855551550-2696677aaf28?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&h=800&q=80" alt="">
-        <p>Carcasa: protejează componentele calculatorului și permite accesul la acestea pentru instalare sau întreținere.</p>
+        <p><b>Carcasa</b> protejează componentele calculatorului și permite accesul la acestea pentru instalare sau întreținere.</p>
       </div>
       <div id="input" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/4011/4011563.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1668395090641-1df332e3389f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
-        <p>Dispozitive de intrare/ieșire (tastatură, mouse, monitor, etc): permit utilizatorului să interacționeze cu calculatorul și să primească informații de la acesta.</p>
+        <p> <b>Dispozitivele de intrare</b> sunt utilizate pentru a introduce date în calculator: tastatura, mouse-ul, microfonul, camera web, dispozitivele tactile.</p>
       </div>
       <div id="output" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/6256/6256704.png" alt="">
+        <img class="component-cover" src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
+        <p><b>Dispozitivele de ieșire</b> afișează date procesate de calculator: monitorul, imprimanta, difuzoarele.</p>
       </div>
     </div>
 
@@ -197,25 +199,25 @@
               <!-- Slides -->
               <div class="swiper-slide">
                 <span class="title">
-                  <h2>Calculatorul Quantic</h2>
+                  <h2>Calculatorul Cuantic</h2>
                   <p>În prezent, majoritatea calculatoarelor utilizează arhitectura von Neumann, care se bazează pe procesul secvențial de instrucțiuni și pe stocarea datelor în memorie. Cu toate acestea, calculatoarele cuantice se bazează pe proprietățile mecanice cuantice ale particulelor și pot efectua operațiuni în paralel, ceea ce le face mult mai rapide decât calculatoarele tradiționale.
                     Calculatoarele cuantice au potențialul de a rezolva probleme care sunt imposibil de rezolvat cu calculatoarele tradiționale, cum ar fi simularea moleculelor sau a rețelelor de proteine. În viitor, este posibil ca acestea să fie utilizate în mod obișnuit în domenii precum cercetarea medicală sau dezvoltarea de noi materiale.
                     Cu toate acestea, există și provocări legate de calculatoarele cuantice. Acestea sunt foarte sensibile la interferențe și erori și sunt dificil de construit și de menținut. În plus, utilizarea lor poate ridica și probleme de securitate.</p>
-                </span>
-              </div>
-              <div class="swiper-slide">
-                <span class="title">
-                  <h2>Realitatea virtuala si augmentata</h2>
-                  <p>alculatoarele cu dispozitive de realitate virtuală și augmentată. Aceste tehnologii permit utilizatorilor să experimenteze interacțiunea cu lumi virtuale, aducând o nouă dimensiune în utilizarea computerelor. De exemplu, jocurile video și simulările pot deveni mult mai realiste și interactive, oferind o experiență de neegalat. În plus, realitatea augmentată poate fi utilizată pentru a afișa informații suplimentare și a îmbunătăți înțelegerea unui anumit subiect sau obiect. Aceste tehnologii sunt în continuă dezvoltare, iar utilizarea lor se va extinde în multe domenii, inclusiv în educație, medicină și afaceri.</p>
+                  <div class="img-container">
+                    <img src="https://www.cnet.com/a/img/resize/1c80365a22ead8e1cd8944942eab39d40b47249a/hub/2019/06/26/2cfd4430-2344-4d75-8bcc-8702ceb8bab0/20180405-ibm-q-quantum-computer-01.jpg?auto=webp&fit=crop&height=630&width=1200" alt="">
+                    <img src="https://i.pinimg.com/originals/5e/17/ef/5e17efd31f59e843a3f1bf15c8b49e75.jpg" alt="">
+                  </div>
                 </span>
               </div>
               <div class="swiper-slide history-slide">
                 <span class="title">
                   <h2>Inteligenta Artificiala</h2>
-                  <p>Una dintre cele mai mari inovații în tehnologia informației în ultimii ani este inteligența artificială (IA). Această tehnologie se bazează pe utilizarea algoritmilor de învățare automată pentru a crea sisteme care pot simula inteligența umană. În viitor, este de așteptat ca calculatoarele să devină tot mai capabile să proceseze informații și să înțeleagă contextul, ceea ce ar putea duce la o revoluție în domeniul asistenței medicale, al roboților sau al transportului autonom.
-                    Cu toate acestea, există și provocări legate de utilizarea IA. De exemplu, există preocupări cu privire la utilizarea acesteia în mod incorect sau la dependența excesivă de tehnologie. În plus, există întotdeauna riscul ca aceste sisteme să fie programate să fie discriminatorii sau să perpetueze prejudecățile.</p>
-                  <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/83eb093f-d354-45de-b983-10ad4178874d.webp" alt="">
-                  <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/54a19762-7a63-4188-b05a-2a00d2219f67.webp" alt="">
+                  <p>Una dintre cele mai mari inovații în tehnologia informației în ultimii ani este inteligența artificială (IA). Această tehnologie se bazează pe utilizarea algoritmilor de învățare automată pentru a crea sisteme care pot simula inteligența umană. Cu toate acestea, există și provocări legate de utilizarea IA. De exemplu, există preocupări cu privire la utilizarea acesteia în mod incorect sau la dependența excesivă de tehnologie. În plus, există întotdeauna riscul ca aceste sisteme să fie programate să fie discriminatorii sau să perpetueze prejudecățile.</p>
+                  <div class="img-container">
+                    <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/83eb093f-d354-45de-b983-10ad4178874d.webp" alt="">
+                    <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/54a19762-7a63-4188-b05a-2a00d2219f67.webp" alt="">
+                    <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/f797c06b-9186-4eac-9c1c-a4728ec99906.webp" alt="">
+                  </div>
                 </span>
               </div>
               </div>
