made the site responsive

--- a/index.html
+++ b/index.html
@@ -200,9 +200,7 @@
               <div class="swiper-slide">
                 <span class="title">
                   <h2>Calculatorul Cuantic</h2>
-                  <p>În prezent, majoritatea calculatoarelor utilizează arhitectura von Neumann, care se bazează pe procesul secvențial de instrucțiuni și pe stocarea datelor în memorie. Cu toate acestea, calculatoarele cuantice se bazează pe proprietățile mecanice cuantice ale particulelor și pot efectua operațiuni în paralel, ceea ce le face mult mai rapide decât calculatoarele tradiționale.
-                    Calculatoarele cuantice au potențialul de a rezolva probleme care sunt imposibil de rezolvat cu calculatoarele tradiționale, cum ar fi simularea moleculelor sau a rețelelor de proteine. În viitor, este posibil ca acestea să fie utilizate în mod obișnuit în domenii precum cercetarea medicală sau dezvoltarea de noi materiale.
-                    Cu toate acestea, există și provocări legate de calculatoarele cuantice. Acestea sunt foarte sensibile la interferențe și erori și sunt dificil de construit și de menținut. În plus, utilizarea lor poate ridica și probleme de securitate.</p>
+                  <p>În prezent, majoritatea calculatoarelor utilizează arhitectura von Neumann, care se bazează pe procesul secvențial de instrucțiuni și pe stocarea datelor în memorie. Calculatoarele cuantice se bazează pe proprietățile mecanice cuantice ale particulelor și pot efectua operațiuni în paralel, ceea ce le face mult mai rapide decât calculatoarele tradiționale. Calculatoarele cuantice au potențialul de a rezolva probleme care sunt imposibil de rezolvat cu calculatoarele tradiționale, cum ar fi simularea moleculelor. Cu toate acestea, există și provocări legate de calculatoarele cuantice. Acestea sunt foarte sensibile la interferențe și erori și sunt dificil de construit și de menținut.</p>
                   <div class="img-container">
                     <img src="https://www.cnet.com/a/img/resize/1c80365a22ead8e1cd8944942eab39d40b47249a/hub/2019/06/26/2cfd4430-2344-4d75-8bcc-8702ceb8bab0/20180405-ibm-q-quantum-computer-01.jpg?auto=webp&fit=crop&height=630&width=1200" alt="">
                     <img src="https://i.pinimg.com/originals/5e/17/ef/5e17efd31f59e843a3f1bf15c8b49e75.jpg" alt="">
@@ -212,7 +210,12 @@
               <div class="swiper-slide history-slide">
                 <span class="title">
                   <h2>Inteligenta Artificiala</h2>
-                  <p>Una dintre cele mai mari inovații în tehnologia informației în ultimii ani este inteligența artificială (IA). Această tehnologie se bazează pe utilizarea algoritmilor de învățare automată pentru a crea sisteme care pot simula inteligența umană. Cu toate acestea, există și provocări legate de utilizarea IA. De exemplu, există preocupări cu privire la utilizarea acesteia în mod incorect sau la dependența excesivă de tehnologie. În plus, există întotdeauna riscul ca aceste sisteme să fie programate să fie discriminatorii sau să perpetueze prejudecățile.</p>
+                  <p>Una dintre cele mai mari inovații în tehnologia informației în ultimii ani este inteligența artificială (AI). Deși, încă într-o stare incipientă, inteligența artificială este folosită in multe domenii:</p>
+                  <ul>
+                    <li> - în industria sănătății, este folosită pentru a ajuta la detectarea precoce a bolilor, pentru a identifica potențiale probleme de sănătate și pentru a îmbunătăți procesul de diagnosticare</li> 
+                    <li> - în industria financiară, este folosită pentru a îmbunătăți procesul de luare a deciziilor și pentru a detecta fraude.</li>
+                    <li> - în transport, este folosită pentru a gestiona traficul și pentru a optimiza traseele de livrare.</li>
+                  </ul>
                   <div class="img-container">
                     <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/83eb093f-d354-45de-b983-10ad4178874d.webp" alt="">
                     <img src="https://krea-prod-v1-generations.s3.us-east-1.amazonaws.com/images/54a19762-7a63-4188-b05a-2a00d2219f67.webp" alt="">
