finished and ready to be presented

--- a/index.html
+++ b/index.html
@@ -140,52 +140,80 @@
       <div id="processor" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908535.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1613616631374-121ea711cc3d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&q=500" alt="">
-        <p><b>Procesorul</b> este componenta calculatorului care execută instrucțiuni și efectuează operații aritmetice și logice.</p>
+        <div>
+          <p><b>Procesorul</b> este componenta calculatorului care execută instrucțiuni și efectuează operații aritmetice și logice. Caracteristici:</p>  
+          <ul><li>- frecvența, măsurată in Hz</li><li>- numărul de nuclee</li></ul>
+        </div>
       </div>
       <div id="motherboard" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908540.png" alt="">
         <img  class="component-cover"src="https://images.pexels.com/photos/3520694/pexels-photo-3520694.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-        <p><b>Placa de bază</b> a sistemului, conectează toate componentele calculatorului și asigură comunicarea dintre ele.</p>
+        <div>
+          <p><b>Placa de bază</b> a sistemului, conectează toate componentele calculatorului și asigură comunicarea dintre ele. Caracteristici:</p>
+          <ul><li>- dimensiuni</li><li>- număr de sloturi si porturi</li></ul>
+        </div>
       </div>
       <div id="memory" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908522.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1562976540-1502c2145186?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1631&q=80" alt="">
-        <p><b>Memoria RAM</b> este un tip de memorie temporară, care stochează datele și programele utilizate în mod curent.</p>
+        <div>
+          <p><b>Memoria RAM</b> este un tip de memorie temporară, care stochează datele și programele utilizate în mod curent. Caracteristici:</p>
+          <ul><li>- capacitatea, masurată in GB</li><li>- viteza, masurată in MHz</li></ul>
+        </div>
       </div>
       <div id="storage" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908521.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1597852074816-d933c7d2b988?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="">
-        <p><b>Stocarea</b> salvează programele și fișierele permanent.</p>
+        <div>
+          <p><b>Mediile de stocare</b> salvează programele și fișierele permanent. Sunt de 2 feluri: HardDisk si Solid State Drive .Caracteristici:</p>
+          <ul><li>- capacitatea, masurată in GB sau TB</li><li>- viteza, masurată in rotații pe minut (HardDisk) sau MB/s (SSD)</li></ul>
+        </div>
       </div>
       <div id="psu" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908526.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1659856577105-c8ec1a364aa0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=800&h=600&q=80" alt="">
-        <p><b>Alimentatorul de putere</b> este componenta care transformă curentul alternativ în curent continuu și alimentează toate componentele calculatorului.</p>
+        <div>
+          <p><b>Sursa de alimentare</b> este componenta care transformă curentul alternativ în curent continuu și alimentează toate componentele calculatorului. Caracteristici:</p>
+          <ul><li>- puterea maximă, masurată in W(watts)</li><li>- eficiența, masurată ca procent din totalul energiei folosite</li></ul>
+        </div>
       </div>
       <div id="gpu" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/1470/1470162.png" alt="">
         <img class="component-cover" src="https://images.pexels.com/photos/8622911/pexels-photo-8622911.jpeg?auto=compress&cs=tinysrgb&w=1600" alt="">
-        <p><b>Placa grafică</b> este componenta care procesează informațiile grafice și afișează imagini pe ecran.</p>
+        <div>
+          <p><b>Placa grafică</b> este componenta care procesează informațiile grafice și afișează imagini pe ecran. Caracteristici:</p>
+          <ul><li>- frecvența(MHz)</li><li>- capacitatea memoriei video(GB)</li></ul>
+        </div>
       </div>
       <div id="cooling" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/4617/4617749.png" alt="">
         <img class="component-cover" src="https://images.pexels.com/photos/3520696/pexels-photo-3520696.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-        <p><b>Sistemul de răcire</b> este necesar pentru a menține temperatura calculatorului la niveluri normale, evitând supraincalzirea.</p>
+        <div>
+          <p><b>Sistemul de răcire</b> este necesar pentru a menține temperatura calculatorului la niveluri normale, evitând supraincalzirea. Este alcatuit din Cooler-ul procesorului si ventilatoare. Caracteristici:</p>
+          <ul><li>- viteza ventilatoarelor (rotații pe minut)</li><li>- nivelul de zgomot, măsurat in decibeli</li></ul>
+        </div>
       </div>
       <div id="case" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/908/908593.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1660855551550-2696677aaf28?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1000&h=800&q=80" alt="">
-        <p><b>Carcasa</b> protejează componentele calculatorului și permite accesul la acestea pentru instalare sau întreținere.</p>
+        <div>
+          <p><b>Carcasa</b> protejează componentele calculatorului și permite accesul la acestea pentru instalare sau întreținere. Caracteristici:</p>
+          <ul><li>- dimensiuni</li><li>- greutate</li></ul>
+        </div>
       </div>
       <div id="input" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/4011/4011563.png" alt="">
         <img class="component-cover" src="https://images.unsplash.com/photo-1668395090641-1df332e3389f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="">
-        <p> <b>Dispozitivele de intrare</b> sunt utilizate pentru a introduce date în calculator: tastatura, mouse-ul, microfonul, camera web, dispozitivele tactile.</p>
+        <div>
+          <p> <b>Dispozitivele de intrare</b> sunt utilizate pentru a introduce date în calculator: tastatura, mouse-ul, microfonul, camera web, dispozitivele tactile.</p>
+        </div>
       </div>
       <div id="output" class="component">
         <img class="component-icon" src="https://cdn-icons-png.flaticon.com/512/6256/6256704.png" alt="">
         <img class="component-cover" src="https://images.pexels.com/photos/546819/pexels-photo-546819.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="">
-        <p><b>Dispozitivele de ieșire</b> afișează date procesate de calculator: monitorul, imprimanta, difuzoarele.</p>
+        <div>
+          <p><b>Dispozitivele de ieșire</b> afișează date procesate de calculator: monitorul, imprimanta, difuzoarele.</p>
+        </div>
       </div>
     </div>
 
@@ -209,7 +237,7 @@
               </div>
               <div class="swiper-slide history-slide">
                 <span class="title">
-                  <h2>Inteligenta Artificiala</h2>
+                  <h2>Inteligența Artificială</h2>
                   <p>Una dintre cele mai mari inovații în tehnologia informației în ultimii ani este inteligența artificială (AI). Deși, încă într-o stare incipientă, inteligența artificială este folosită in multe domenii:</p>
                   <ul>
                     <li> - în industria sănătății, este folosită pentru a ajuta la detectarea precoce a bolilor, pentru a identifica potențiale probleme de sănătate și pentru a îmbunătăți procesul de diagnosticare</li> 
