added author name

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
   <div id='stars3'></div>
   <div id="container">
     <div id="home-page">
+      <div id="author">
+        <h2>Buliga Iosif-Ioan</h2>
+        <h2>Prof. David Liliana Mihaela</h2>
+      </div>
       <h1>CALCULATORUL</h1>
       <ul class="main-page-ul">
         <li>
